# swift-bip39-mnemonic

./: .gitignore  .spi.yml  AGENTS.md  BIP39MnemonicKit.podspec  CHANGELOG.md  Cargo.toml  LICENSE  Package.swift  README.md  SECURITY.md  SwiftBIP39.podspec  build.gradle.kts  go.mod  install.sh  jitpack.yml  llms.txt  package-lock.json  package.json  pubspec.yaml  pyproject.toml  settings.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  publish-ecosystems.yml  release-cli.yml  release-cocoapods.yml
Formula/: bip39kit.rb  swiftbip39.rb
Sources/BIP39KitCLI/: main.swift
Sources/BIP39MnemonicKit/: BIP39EnglishWordlist.swift  BIP39Error.swift  Mnemonic.swift
Sources/BIP39MnemonicKit/BIP39MnemonicKit.docc/: BIP39MnemonicKit.md
Sources/SwiftBIP39/: BIP39.swift  BIP39EnglishWordlist.swift  PBKDF2.swift
Sources/SwiftBIP39/SwiftBIP39.docc/: SwiftBIP39.md
Sources/SwiftBIP39CLI/: main.swift
Tests/BIP39MnemonicKitTests/: BIP39MnemonicKitTests.swift
Tests/SwiftBIP39Tests/: SwiftBIP39Tests.swift
dart/lib/src/: bip39.dart  wordlist.dart
dart/test/: bip39_test.dart
docs/: index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
docs/benchmarks/: index.html
docs/comparisons/: bip39mnemonickit-vs-web3swift.html  index.html
docs/dart/: index.html
docs/go/: index.html
docs/javascript/: index.html
docs/kotlin/: index.html
docs/python/: index.html
docs/rust/: index.html
docs/security/: offline-only.md
docs/swift/: index.html
examples/: README.md  run-examples.sh
examples/cli/: README.md  run.sh
examples/dart-flutter/: README.md  pubspec.yaml
examples/go/: README.md  go.mod  main.go
examples/javascript/: README.md  example.mjs  package.json
examples/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
examples/kotlin/src/main/kotlin/: Example.kt
examples/python/: README.md  example.py  requirements.txt
examples/react-native/: App.tsx  README.md  package.json  smoke-test.mjs
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
examples/swift-spm/: Package.swift  README.md
examples/swift-spm/Sources/SwiftExample/: main.swift
go/bip39/: bip39.go  bip39_test.go
javascript/: index.js  react-native.js  wordlist.js
javascript/test/: bip39.test.js  fuzz-smoke.test.js
kotlin/src/main/kotlin/com/devdasx/bip39mnemonickit/: Bip39.kt
kotlin/src/main/kotlin/com/devdasx/swiftbip39/: Bip39.kt
kotlin/src/test/kotlin/com/devdasx/bip39mnemonickit/: Bip39Test.kt
kotlin/src/test/kotlin/com/devdasx/swiftbip39/: Bip39Test.kt
lib/: bip39_mnemonic.dart
python/bip39_mnemonic_kit/: __init__.py  bip39.py
python/tests/: english-vectors.json  test_bip39.py
rust/src/: lib.rs
rust/tests/: bip39.rs
scripts/: benchmark.mjs  test-consumer-packages.sh
test-vectors/: public-vectors.json
