[package]
name = "swiftbip39"
version = "1.1.4"
edition = "2021"
description = "BIP-39 mnemonic generation, validation, and seed derivation."
license = "MIT"
repository = "https://github.com/devdasx/swift-bip39-mnemonic"

[lib]
path = "rust/src/lib.rs"

[[test]]
name = "bip39"
path = "rust/tests/bip39.rs"

[dependencies]
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
