[package]
name = "bip39-mnemonic-kit"
version = "2.0.1"
edition = "2021"
description = "BIP-39 mnemonic generation, validation, entropy conversion, and seed derivation."
license = "MIT"
repository = "https://github.com/devdasx/bip39-mnemonic-kit"

[lib]
path = "rust/src/lib.rs"

[[test]]
name = "bip39"
path = "rust/tests/bip39.rs"

[dependencies]
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
