[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bip39-mnemonic-kit"
version = "2.0.1"
description = "BIP-39 mnemonic generation, validation, entropy conversion, and seed derivation."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "ROYO STUDIOS", email = "royostudios13@gmail.com" }
]
keywords = ["bip39", "mnemonic", "seed phrase", "recovery phrase", "wallet", "crypto wallet"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography"
]

[project.urls]
Homepage = "https://github.com/devdasx/bip39-mnemonic-kit"
Repository = "https://github.com/devdasx/bip39-mnemonic-kit"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
bip39_mnemonic_kit = ["english.txt"]
